feat: Add config validation system and refactor managers
- Added ValidationRules system for DRY config validation
- Created ConfigValidatorV2 with auto-fixes
- Refactored AutoRestartManager into components (SRP)
- Refactored PerformanceProfiler into components (SRP)
- Fixed DRY violations in EnchantCommand
- Added InvSeeConstants for magic numbers
- Updated ConfigLoader with validation integration
- Build successful